[package]
name = "gomod-rs"
version = "0.1.0"
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/sify21/gomod-rs"
description = "A go.mod parser with locations."
categories = ["parser-implementations"]
keywords = ["gomod", "golang", "gomod-parser"]

[dependencies]
nom = "7"
nom_locate = "4"
